--- a/Post To 10C/Base.lproj/ShareViewController.xib
+++ b/Post To 10C/Base.lproj/ShareViewController.xib
@@ -9,7 +9,9 @@
             <connections>
                 <outlet property="authorizedLabel" destination="Yin-kI-nXt" id="U6w-53-V5z"/>
                 <outlet property="postButton" destination="1uM-r7-H1c" id="Rxy-9V-Vc2"/>
+                <outlet property="postTitleTextField" destination="Ffv-jZ-Xjg" id="GvR-69-SHv"/>
                 <outlet property="remainingCharactersLabel" destination="qgj-aV-rIw" id="sr7-jd-ksQ"/>
+                <outlet property="tagsTextField" destination="dBe-ae-Miy" id="7Pc-uq-aFe"/>
                 <outlet property="textView" destination="zGN-CO-03a" id="c8G-rm-Vp4"/>
                 <outlet property="view" destination="1" id="2"/>
             </connections>
@@ -17,10 +19,10 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView translatesAutoresizingMaskIntoConstraints="NO" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="387" height="261"/>
+            <rect key="frame" x="0.0" y="0.0" width="635" height="471"/>
             <subviews>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1uM-r7-H1c">
-                    <rect key="frame" x="301" y="3" width="82" height="32"/>
+                    <rect key="frame" x="549" y="3" width="82" height="32"/>
                     <animations/>
                     <buttonCell key="cell" type="push" title="Post" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="2l4-PO-we5">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -32,7 +34,7 @@
                     </connections>
                 </button>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NVE-vN-dkz">
-                    <rect key="frame" x="223" y="3" width="82" height="32"/>
+                    <rect key="frame" x="471" y="3" width="82" height="32"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="cP1-hK-9ZX"/>
                     </constraints>
@@ -49,7 +51,7 @@ Gw
                     </connections>
                 </button>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aNc-0i-CWK">
-                    <rect key="frame" x="152" y="229" width="82" height="17"/>
+                    <rect key="frame" x="276" y="439" width="82" height="17"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="78" id="sZj-0c-Is7"/>
                     </constraints>
@@ -61,21 +63,21 @@ Gw
                     </textFieldCell>
                 </textField>
                 <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1oB-dD-wdd">
-                    <rect key="frame" x="20" y="39" width="347" height="182"/>
+                    <rect key="frame" x="8" y="64" width="619" height="290"/>
                     <clipView key="contentView" id="QnZ-RB-wih">
-                        <rect key="frame" x="1" y="1" width="345" height="180"/>
+                        <rect key="frame" x="1" y="1" width="617" height="288"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="zGN-CO-03a">
-                                <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
+                                <rect key="frame" x="0.0" y="0.0" width="617" height="288"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="minSize" width="345" height="180"/>
-                                <size key="maxSize" width="463" height="10000000"/>
+                                <size key="minSize" width="617" height="288"/>
+                                <size key="maxSize" width="617" height="10000000"/>
                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                <size key="minSize" width="345" height="180"/>
-                                <size key="maxSize" width="463" height="10000000"/>
+                                <size key="minSize" width="617" height="288"/>
+                                <size key="maxSize" width="617" height="10000000"/>
                             </textView>
                         </subviews>
                         <animations/>
@@ -87,14 +89,14 @@ Gw
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
-                    <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="JfD-wB-GGt">
-                        <rect key="frame" x="330" y="1" width="16" height="180"/>
+                    <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="JfD-wB-GGt">
+                        <rect key="frame" x="602" y="1" width="16" height="288"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
                 </scrollView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qgj-aV-rIw">
-                    <rect key="frame" x="18" y="12" width="57" height="17"/>
+                    <rect key="frame" x="6" y="12" width="57" height="17"/>
                     <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="0 / 2048" id="Ul4-N9-hJM">
                         <font key="font" metaFont="system"/>
@@ -103,12 +105,57 @@ Gw
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Yin-kI-nXt">
-                    <rect key="frame" x="18" y="229" width="130" height="17"/>
+                    <rect key="frame" x="18" y="439" width="254.5" height="17"/>
                     <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="LKr-ds-kEV">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ffv-jZ-Xjg">
+                    <rect key="frame" x="9" y="385" width="617" height="22"/>
+                    <animations/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="NdH-yt-ZMS">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="V5O-KU-IuE">
+                    <rect key="frame" x="7" y="362" width="621" height="17"/>
+                    <animations/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Post content:" id="XsH-Y3-IYe">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="r8J-4p-F0X">
+                    <rect key="frame" x="7" y="415" width="621" height="17"/>
+                    <animations/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Post title:" id="ABM-D2-2lX">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yqS-Eu-htP">
+                    <rect key="frame" x="7" y="36" width="37" height="17"/>
+                    <animations/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Tags:" id="Pzv-PA-Dhf">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dBe-ae-Miy">
+                    <rect key="frame" x="50" y="34" width="577" height="22"/>
+                    <animations/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="CHJ-ZE-wsY">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
             </subviews>
@@ -117,14 +164,28 @@ Gw
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="leading" secondItem="Yin-kI-nXt" secondAttribute="trailing" constant="8" id="2Kd-HK-TUh"/>
                 <constraint firstItem="Yin-kI-nXt" firstAttribute="centerY" secondItem="aNc-0i-CWK" secondAttribute="centerY" id="2wA-Le-BtQ"/>
                 <constraint firstAttribute="bottom" secondItem="1uM-r7-H1c" secondAttribute="bottom" constant="10" id="4wH-De-nMF"/>
-                <constraint firstItem="qgj-aV-rIw" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="6WE-fx-CxN"/>
-                <constraint firstItem="NVE-vN-dkz" firstAttribute="top" secondItem="1oB-dD-wdd" secondAttribute="bottom" constant="8" id="G6Y-WK-J2m"/>
-                <constraint firstItem="1oB-dD-wdd" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="Szk-pm-bF1"/>
+                <constraint firstItem="r8J-4p-F0X" firstAttribute="width" secondItem="Ffv-jZ-Xjg" secondAttribute="width" id="5XQ-xd-c3K"/>
+                <constraint firstItem="dBe-ae-Miy" firstAttribute="centerY" secondItem="yqS-Eu-htP" secondAttribute="centerY" id="5cN-Ec-bLe"/>
+                <constraint firstItem="yqS-Eu-htP" firstAttribute="leading" secondItem="zGN-CO-03a" secondAttribute="leading" id="5dh-dp-JVE"/>
+                <constraint firstItem="qgj-aV-rIw" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="8" id="6WE-fx-CxN"/>
+                <constraint firstItem="Ffv-jZ-Xjg" firstAttribute="top" secondItem="r8J-4p-F0X" secondAttribute="bottom" constant="8" id="6y2-jJ-d9u"/>
+                <constraint firstItem="V5O-KU-IuE" firstAttribute="centerX" secondItem="zGN-CO-03a" secondAttribute="centerX" id="7wf-E1-WTF"/>
+                <constraint firstAttribute="trailing" secondItem="dBe-ae-Miy" secondAttribute="trailing" constant="8" id="Ik0-ti-29I"/>
+                <constraint firstItem="dBe-ae-Miy" firstAttribute="top" secondItem="zGN-CO-03a" secondAttribute="bottom" constant="9" id="JxQ-Ce-6zc"/>
+                <constraint firstItem="r8J-4p-F0X" firstAttribute="top" secondItem="aNc-0i-CWK" secondAttribute="bottom" constant="7" id="KOa-aw-jl9"/>
+                <constraint firstItem="V5O-KU-IuE" firstAttribute="width" secondItem="zGN-CO-03a" secondAttribute="width" id="Mhm-NL-iqC"/>
+                <constraint firstItem="Ffv-jZ-Xjg" firstAttribute="centerX" secondItem="zGN-CO-03a" secondAttribute="centerX" id="RXH-5b-mgZ"/>
+                <constraint firstItem="1oB-dD-wdd" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="8" id="Szk-pm-bF1"/>
+                <constraint firstItem="r8J-4p-F0X" firstAttribute="centerX" secondItem="Ffv-jZ-Xjg" secondAttribute="centerX" id="TQk-6X-Q7A"/>
                 <constraint firstAttribute="bottom" secondItem="NVE-vN-dkz" secondAttribute="bottom" constant="10" id="USG-Gg-of3"/>
                 <constraint firstItem="Yin-kI-nXt" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="VGI-xL-1uB"/>
-                <constraint firstAttribute="trailing" secondItem="1oB-dD-wdd" secondAttribute="trailing" constant="20" id="Yfa-hH-seZ"/>
+                <constraint firstAttribute="trailing" secondItem="1oB-dD-wdd" secondAttribute="trailing" constant="8" id="Yfa-hH-seZ"/>
                 <constraint firstItem="1uM-r7-H1c" firstAttribute="leading" secondItem="NVE-vN-dkz" secondAttribute="trailing" constant="8" id="a8N-vS-Ew9"/>
-                <constraint firstItem="1oB-dD-wdd" firstAttribute="top" secondItem="aNc-0i-CWK" secondAttribute="bottom" constant="8" id="ntf-3S-dGB"/>
+                <constraint firstItem="dBe-ae-Miy" firstAttribute="leading" secondItem="yqS-Eu-htP" secondAttribute="trailing" constant="8" id="aDh-at-z91"/>
+                <constraint firstItem="V5O-KU-IuE" firstAttribute="top" secondItem="Ffv-jZ-Xjg" secondAttribute="bottom" constant="6" id="bFn-Kb-zQE"/>
+                <constraint firstItem="zGN-CO-03a" firstAttribute="top" secondItem="V5O-KU-IuE" secondAttribute="bottom" constant="9" id="fX3-1o-jhL"/>
+                <constraint firstItem="qgj-aV-rIw" firstAttribute="top" secondItem="dBe-ae-Miy" secondAttribute="bottom" constant="5" id="lSK-wx-YSz"/>
+                <constraint firstItem="Ffv-jZ-Xjg" firstAttribute="width" secondItem="zGN-CO-03a" secondAttribute="width" id="prD-Ml-ZO1"/>
                 <constraint firstItem="NVE-vN-dkz" firstAttribute="width" secondItem="1uM-r7-H1c" secondAttribute="width" id="qPo-ky-Fcw"/>
                 <constraint firstAttribute="trailing" secondItem="1uM-r7-H1c" secondAttribute="trailing" constant="10" id="qfT-cw-QQ2"/>
                 <constraint firstItem="qgj-aV-rIw" firstAttribute="centerY" secondItem="NVE-vN-dkz" secondAttribute="centerY" id="sk1-nZ-eqA"/>
@@ -132,7 +193,7 @@ Gw
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="vpR-tf-ebx"/>
             </constraints>
             <animations/>
-            <point key="canvasLocation" x="564.5" y="487.5"/>
+            <point key="canvasLocation" x="501.5" y="597.5"/>
         </customView>
     </objects>
 </document>
