--- a/Post To 10C/Base.lproj/ShareViewController.xib
+++ b/Post To 10C/Base.lproj/ShareViewController.xib
@@ -140,7 +140,7 @@ Gw
                 </progressIndicator>
                 <tokenField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PHk-XX-GVp">
                     <rect key="frame" x="50" y="34" width="577" height="22"/>
-                    <tokenFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" alignment="left" placeholderString="" drawsBackground="YES" allowsEditingTextAttributes="YES" id="6TL-If-C2b">
+                    <tokenFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" alignment="left" placeholderString="comma, separated, tags" drawsBackground="YES" allowsEditingTextAttributes="YES" id="6TL-If-C2b">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
