--- a/Post To 10C/Base.lproj/ShareViewController.xib
+++ b/Post To 10C/Base.lproj/ShareViewController.xib
@@ -7,12 +7,12 @@
         <customObject id="-2" userLabel="File's Owner" customClass="ShareViewController">
             <connections>
                 <outlet property="authorizedLabel" destination="Yin-kI-nXt" id="U6w-53-V5z"/>
-                <outlet property="fileUploadSpinner" destination="ayi-lo-IwP" id="36F-i9-WMl"/>
                 <outlet property="postButton" destination="1uM-r7-H1c" id="Rxy-9V-Vc2"/>
                 <outlet property="postTitleTextField" destination="Ffv-jZ-Xjg" id="GvR-69-SHv"/>
                 <outlet property="remainingCharactersLabel" destination="qgj-aV-rIw" id="sr7-jd-ksQ"/>
                 <outlet property="tagsTokenField" destination="PHk-XX-GVp" id="huw-sS-vnQ"/>
                 <outlet property="textView" destination="zGN-CO-03a" id="c8G-rm-Vp4"/>
+                <outlet property="uploadProgressBar" destination="f3i-EP-2r0" id="Msi-2n-lvy"/>
                 <outlet property="view" destination="1" id="2"/>
             </connections>
         </customObject>
@@ -138,9 +138,6 @@ Gw
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="ayi-lo-IwP">
-                    <rect key="frame" x="609" y="440" width="16" height="16"/>
-                </progressIndicator>
                 <tokenField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PHk-XX-GVp">
                     <rect key="frame" x="50" y="34" width="577" height="22"/>
                     <tokenFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" alignment="left" placeholderString="comma, separated, tags" drawsBackground="YES" allowsEditingTextAttributes="YES" id="6TL-If-C2b">
@@ -149,10 +146,15 @@ Gw
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </tokenFieldCell>
                 </tokenField>
+                <progressIndicator wantsLayer="YES" maxValue="100" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="f3i-EP-2r0">
+                    <rect key="frame" x="526" y="438" width="100" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="eDh-Hj-f3K"/>
+                    </constraints>
+                </progressIndicator>
             </subviews>
             <constraints>
                 <constraint firstItem="1uM-r7-H1c" firstAttribute="leading" secondItem="NVE-vN-dkz" secondAttribute="trailing" constant="8" id="1UO-J1-LbJ"/>
-                <constraint firstItem="ayi-lo-IwP" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="1vw-Zf-m5F"/>
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="leading" secondItem="Yin-kI-nXt" secondAttribute="trailing" constant="8" id="2Kd-HK-TUh"/>
                 <constraint firstItem="Yin-kI-nXt" firstAttribute="centerY" secondItem="aNc-0i-CWK" secondAttribute="centerY" id="2wA-Le-BtQ"/>
                 <constraint firstAttribute="bottom" secondItem="1uM-r7-H1c" secondAttribute="bottom" constant="10" id="4wH-De-nMF"/>
@@ -180,9 +182,10 @@ Gw
                 <constraint firstItem="Ffv-jZ-Xjg" firstAttribute="width" secondItem="zGN-CO-03a" secondAttribute="width" id="prD-Ml-ZO1"/>
                 <constraint firstItem="NVE-vN-dkz" firstAttribute="width" secondItem="1uM-r7-H1c" secondAttribute="width" id="qPo-ky-Fcw"/>
                 <constraint firstAttribute="trailing" secondItem="1uM-r7-H1c" secondAttribute="trailing" constant="10" id="qfT-cw-QQ2"/>
+                <constraint firstItem="f3i-EP-2r0" firstAttribute="top" secondItem="1" secondAttribute="top" constant="14" id="s9Q-Fn-1FO"/>
                 <constraint firstItem="qgj-aV-rIw" firstAttribute="centerY" secondItem="NVE-vN-dkz" secondAttribute="centerY" id="sk1-nZ-eqA"/>
                 <constraint firstAttribute="centerX" secondItem="aNc-0i-CWK" secondAttribute="centerX" id="uV3-Wn-RA3"/>
-                <constraint firstAttribute="trailing" secondItem="ayi-lo-IwP" secondAttribute="trailing" constant="10" id="vLL-Cj-ZHW"/>
+                <constraint firstItem="f3i-EP-2r0" firstAttribute="trailing" secondItem="Ffv-jZ-Xjg" secondAttribute="trailing" id="vDE-K0-8RH"/>
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="vpR-tf-ebx"/>
             </constraints>
             <point key="canvasLocation" x="501.5" y="597.5"/>
